[project]
name = "spotify-hit-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "elodie",email = "elo.schwartz91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "optuna (>=4.7.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "spotify_hit_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
